@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Jan 2011; <slep@gentoo.org> -sagan-0.1.6.ebuild:
+  drop old sagan ebuild
+
   23 Jan 2011; <slep@gentoo.org> sagan-9999.ebuild, files/sagan.confd,
   files/sagan.init, metadata.xml:
   more fix
